--- a/package.json
+++ b/package.json
@@ -5,17 +5,55 @@
   "main": "index.js",
   "repository": "https://github.com/ago008/ky-table",
   "scripts": {
-    "dev": "father-doc dev",
+    "build": "father build",
+    "build-doc": "dumi build",
+    "dev": "dumi dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "types": "lib/index.d.ts",
   "author": "Focus Wong",
   "license": "ISC",
   "dependencies": {
+    "antd": "^4.3.3",
+    "dumi": "^1.0.31",
     "father": "^2.29.3",
-    "father-doc": "^1.0.0-beta.7",
-    "antd": "^4.3.3"
+    "react-github-btn": "^1.2.0"
   },
+  "files": [
+    "/lib",
+    "/es",
+    "/dist"
+  ],
   "devDependencies": {
-    "umi-plugin-githubpages": "^2.0.1"
-  }
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
+    "@types/classnames": "^2.2.9",
+    "@types/enzyme": "^3.10.3",
+    "@types/jest": "^24.0.23",
+    "@types/lodash.isequal": "^4.5.5",
+    "@types/node": "^12.12.8",
+    "@types/react": "^16.9.11",
+    "@umijs/fabric": "^2.0.0",
+    "babel-plugin-import": "^1.12.2",
+    "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
+    "less-loader": "^5.0.0",
+    "style-loader": "^1.1.3",
+    "stylelint": "^11.0.0",
+    "typescript": "^3.9.5",
+    "umi-plugin-githubpages": "^2.0.1",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.10"
+  },
+  "peerDependencies": {
+    "react": "16.x"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 10"
+  ]
 }
