--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "father build",
     "build-doc": "dumi build",
-    "dev": "dumi dev",
+    "dev": "cross-env DEPLOY_ENV=\"dev\" cross-env APP_KEY=\"FOP-KACS-CORE\" cross-env APP_SECRET=\"FOP-KACS-CORE\" SYSTEM_KEY=\"5e0497c47f43f20c4338ea46\" dumi dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "types": "lib/index.d.ts",
@@ -38,7 +38,9 @@
     "@types/react": "^16.9.11",
     "@umijs/fabric": "^2.0.0",
     "babel-plugin-import": "^1.12.2",
+    "cross-env": "^7.0.2",
     "css-loader": "^3.4.2",
+    "dva": "^2.4.1",
     "eslint": "^6.8.0",
     "less-loader": "^5.0.0",
     "style-loader": "^1.1.3",
